Update example env

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DB_DATABASE=attendize
 DB_USERNAME=attendize
 DB_PASSWORD=attendize
 
-DEFAULT_DATE_FORMAT="Y-m-d"
-DEFAULT_TIME_FORMAT="H:i"
+DEFAULT_DATEPICKER_SEPERATOR="-"
+DEFAULT_DATEPICKER_FORMAT="yyyy-MM-dd HH:mm"
 DEFAULT_DATETIME_FORMAT="Y-m-d H:i"
 
 # https://github.com/NitMedia/wkhtml2pdf#driver-types
