--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "illuminate/support": "~5.6",
         "intervention/image": "~2.4",
         "laracasts/utilities": "~2.1",
-       "laravel/framework": "~5.6",
+        "laravel/framework": "~5.6",
         "laravel/socialite": "~3.0",
         "laravelcollective/html": "~5.6",
         "league/flysystem-aws-s3-v3": "~1.0",
@@ -37,14 +37,15 @@
         "php-http/curl-client": "^1.7",
         "php-http/message": "^1.6",
         "predis/predis": "~1.1",
-       "vinelab/http": "~1.5"
+        "vinelab/http": "~1.5",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "7.3.*",
         "phpspec/phpspec": "5.0.*",
         "fzaninotto/faker": "1.8.*",
         "symfony/dom-crawler": "~3.0",
-      "symfony/css-selector": "~3.0"
+        "symfony/css-selector": "~3.0"
     },
     "autoload": {
         "classmap": [
