--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "gulp": "^3.8.8",
     "laravel-elixir": "*"
   },
   "scripts": {
+    "build-frontend": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
