--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         "php-http/message": "^1.6",
         "predis/predis": "~1.1",
         "vinelab/http": "~1.5",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "7.3.*",
@@ -74,6 +76,10 @@
         "post-create-project-cmd": [
             "php -r \"copy('.env.example', '.env');\"",
             "php artisan key:generate"
+        ],
+        "post-install-cmd": [
+            "chmod -R 755 bootstrap\/cache",
+            "php artisan cache:clear"
         ]
     },
     "config": {
