--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "vinelab/http": "~1.5",
         "laravel/tinker": "^1.0",
         "setasign/fpdf": "^1.8",
-        "setasign/fpdi": "^2.2"
+        "setasign/fpdi": "^2.2",
+        "ext-gd": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "7.3.*",
