Check-in pop-up

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_ENV=local
+APP_ENV=production
 APP_DEBUG=true
 APP_URL=
 APP_CIPHER=AES-256-CBC
@@ -6,11 +6,12 @@ APP_KEY=
 APP_TIMEZONE=
 
 DB_TYPE=mysql
-DB_HOST=db
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=attendize
-DB_USERNAME=attendize
-DB_PASSWORD=attendize
+DB_DATABASE=accred
+DB_USERNAME=root
+DB_PASSWORD=Fiawec@2019
+DB_SOCKET="/cloudsql/lmem-preprod:europe-west1:accred-app"
 
 DEFAULT_DATEPICKER_SEPERATOR="-"
 DEFAULT_DATEPICKER_FORMAT="yyyy-MM-dd HH:mm"
