--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "laravel/socialite": "~3.0",
         "laravelcollective/html": "~5.6",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "maatwebsite/excel": "~2.1",
+        "maatwebsite/excel": "^3.1",
         "maxhoffmann/parsedown-laravel": "dev-master",
         "mcamara/laravel-localization": "~1.2",
         "mews/purifier": "~2.0",
