--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=accred
 DB_USERNAME=root
-DB_PASSWORD=Fiawec@2019
-DB_SOCKET="/cloudsql/lmem-preprod:europe-west1:accred-app"
+DB_PASSWORD=
+DB_SOCKET=
 
 DEFAULT_DATEPICKER_SEPERATOR="-"
 DEFAULT_DATEPICKER_FORMAT="yyyy-MM-dd HH:mm"
