--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_ENV=production
 APP_DEBUG=true
-APP_URL=
+APP_URL=https://lmem-preprod.appspot.com
 APP_CIPHER=AES-256-CBC
 APP_KEY=
 APP_TIMEZONE=
