--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /vendor
 /node_modules
 .env
+.env.example
 .idea
 installed
 cloud_sql_proxy.exe
@@ -12,6 +13,7 @@ cloud_sql_proxy.exe
 /composer.phar
 _ide_helper.php
 *.swp
+app.yaml
 
 # Do not include backup lang files
 resources/lang/*/[a-zA-Z]*20[0-9][0-9][0-1][0-9][0-3][0-9]_[0-2][0-9][0-5][0-9][0-5][0-9].php
