--- a/app.yaml
+++ b/app.yaml
@@ -10,7 +10,7 @@ skip_files:
 
 env_variables:
   # Put production environment variables here.
-  APP_ENV: local   # or production
+  APP_ENV: production   # or production
   APP_DEBUG : true
   APP_LOG: errorlog
   APP_KEY: base64:gLg34YBy+1f3DsonrAnP7kdiNBsAozlsxJLiJ7HDJ10=
@@ -24,11 +24,6 @@ env_variables:
   DB_USERNAME: root
   DB_PASSWORD: Fiawec@2019
   DB_SOCKET: "/cloudsql/lmem-preprod:europe-west1:accred-app"
-  # DB_CONNECTION: mysql
-  # DB_HOST: eu-cdbr-west-02.cleardb.net
-  # DB_DATABASE: heroku_778403ff46ca725
-  # DB_USERNAME: b818f8f7d73431
-  # DB_PASSWORD: e076c4e6
 
 beta_settings:
     # for Cloud SQL, set this value to the Cloud SQL connection name,
